# LSDEM2.0

./: .gitignore  README.md  tutorial1.avi
FunDEM/: CMakeLists.txt  README.md
FunDEM/apps/: CMakeLists.txt
FunDEM/apps/Tutorial/: SuperellipsoidLSParticle.cpp  globalDamping.cuh
FunDEM/apps/test/: LSSphereBouncing.cpp
FunDEM/apps/tutorial/: globalDamping.cu  globalDamping.cuh  tutorial1-LSParticleFalling.cpp  tutorial2-LSParticleRolling.cpp  tutorial3-bondedLSParticleBeam.cpp  tutorial4-PeriodicBoundary.cpp
FunDEM/kernel/: CMakeLists.txt  LSInteraction.h  LSObject.h  LSParticle.h  LSParticleGenerator.h  LSSolver.h  PeriodicBoundary.h  SolidInteraction.h  Sphere.h  VBondedInteraction.h  spherePackGenerator.h
FunDEM/kernel/CUDAKernelFunction/: CMakeLists.txt  LSParticleContactDetectionKernel.cu  LSParticleContactDetectionKernel.cuh  contactKernel.cu  contactKernel.cuh  particleIntegrationKernel.cu  particleIntegrationKernel.cuh
FunDEM/kernel/CUDAKernelFunction/myUtility/: buildHashStartEnd.cu  buildHashStartEnd.h  myFileEdit.h  myHostDeviceArray.h  myMat.h  myQua.h  mySpatialGrid.cu  mySpatialGrid.h  myVec.h
FunDEM/kernel/helper/: LevelSetObjectGenerator.h  OBJLoader.h  SpherePackingGenerator.h
demo/: T2.mov  tutorial1.mov  tutorial2-period1.mov  tutorial2-period2.mov  tutorial2-period3.mov
